--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,6 +15,8 @@ link_directories(${Boost_LIBRARYDIR})
 set(SOURCES
    orientation.cpp
    has_intersection.cpp
+   contains.cpp
+   convex_hull.cpp
 )
 
 add_executable(cg-test ${SOURCES})
